# code_forge

./: .gitignore  CHANGELOG.md  README.es.md  README.md  README.zh-CN.md  analysis_options.yaml  analysis_options_base.yaml  fix_status.txt  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: analysis_options.yaml  pubspec.yaml
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/windows/flutter/: generated_plugins.cmake
ios/: code_forge.podspec
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/code_forge/: Package.swift
ios/code_forge/Sources/code_forge/: dummy_file.c
lib/: code_forge.dart
lib/LSP/: lsp.dart  lsp_stdio.dart
lib/code_forge/: code_area.dart  controller.dart  find_controller.dart  rope.dart  scroll.dart  styling.dart  syntax_highlighter.dart  undo_redo.dart  utils.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: editor.dart  rope.dart
linux/: CMakeLists.txt
linux/flutter/ephemeral/.plugin_symlinks/: url_launcher_linux
macos/: code_forge.podspec
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/code_forge/: Package.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: editor.rs  mod.rs  rope.rs
windows/: CMakeLists.txt
